Changed symbols for \thanks

--- a/cs-classes.cls
+++ b/cs-classes.cls
@@ -143,6 +143,8 @@
 
 \renewcommand{\footnoterule}{\vfill\kern 4pt \hrule width 0.4\columnwidth \kern 2.6pt}
 
+\let\@fnsymbol\@arabic
+
 %%% Change classical symbols
 \let\temp\phi
 \let\phi\varphi
