--- a/cs-classes.cls
+++ b/cs-classes.cls
@@ -221,6 +221,7 @@
 \newcommand{\Pc}{\mathcal{P}} % Parts of a set
 \newcommand{\Q}{\mathbb{Q}} % Rationnal numbers
 \newcommand{\R}{\mathbb{R}} % Real numbers
+\newcommand{\Rc}{\mathcal{R}}
 \renewcommand{\S}{\mathcal{S}} % Semantic
 \newcommand{\T}{\mathcal{T}}
 \newcommand{\X}{\mathcal{X}} % Input set
