--- a/cs-classes.cls
+++ b/cs-classes.cls
@@ -84,6 +84,7 @@
     colorlinks     = false,
     urlbordercolor = red,
     citecolor      = gray,
+    breaklinks     = true
 }
 
 \usetikzlibrary{patterns, decorations.pathreplacing, bending, angles,quotes}
@@ -98,8 +99,6 @@
 
 \counterwithin{figure}{section}
 \captionsetup[figure]{hypcap=false}
-
-\graphicspath{{../cs-classes}}
 
 \if@titlepaged
 \AfterEndPreamble{
@@ -221,7 +220,6 @@
 \newcommand{\Pc}{\mathcal{P}} % Parts of a set
 \newcommand{\Q}{\mathbb{Q}} % Rationnal numbers
 \newcommand{\R}{\mathbb{R}} % Real numbers
-\newcommand{\Rc}{\mathcal{R}}
 \renewcommand{\S}{\mathcal{S}} % Semantic
 \newcommand{\T}{\mathcal{T}}
 \newcommand{\X}{\mathcal{X}} % Input set
